Added new background

--- a/css/main.css
+++ b/css/main.css
@@ -490,7 +490,7 @@ a:focus {
   width: 50px;
   margin: 0px auto;
   height: 2px;
-  background: #009688;
+  background: #167ac1;
 }
 #counter .timer {
   font-size: 50px;
