--- a/less/main.less
+++ b/less/main.less
@@ -549,7 +549,7 @@ background: #fff;
 			width: 50px;
 			margin: 0px auto;
 			height: 2px;
-			background: #009688;
+			background: #167ac1;
 		}
 	}
 	.timer {
