--- a/less/main.less
+++ b/less/main.less
@@ -11,7 +11,7 @@ body{
 }
 
 //Colors
-@blue: #3f51b5;
+@blue: #167ac1;
 
 .btn{
 	font-size: 14px;
@@ -96,7 +96,7 @@ a:focus{
     -webkit-animation-name: fadeInDown;
     animation-name: fadeInDown;
     padding: 0!important;
-	background: #3f51b5 !important;
+	background: #167ac1 !important;
   }
 .sticky-navigation{
 	.row{
